# godot

./: .envrc  .gitignore  SConstruct  flake.nix  justfile
.github/workflows/: android_builds.yml  linux_builds.yml  runner.yml  windows_builds.yml
core/: core_bind.cpp  core_bind.h  core_constants.cpp
core/math/: concave_hull.h  concaveman.h  geometry_2d.cpp  geometry_2d.h
core/string/: ustring.cpp  ustring.h
core/templates/: local_vector.h  pdqsort.hpp  sort_array.h  vector.h
core/variant/: array.cpp  variant_call.cpp
doc/classes/: @GlobalScope.xml  BitMap.xml  Geometry2D.xml  LottieSheet.xml  LottieTexture2D.xml  PackedByteArray.xml  ResourceImporterTexture.xml  SkeletonModifier2D.xml  SkeletonModifier2DFABRIK.xml  SkeletonModifier2DJiggle.xml  TXTZFile.xml
main/: main.cpp
modules/a_rust/: .gitignore  Cargo.toml  README.md  SCsub  config.py  gd_glicol.h  gd_jmespath.h  gd_json_converter.h  register_types.cpp  register_types.h
modules/a_rust/crates/gd_glicol/: Cargo.toml
modules/a_rust/crates/gd_glicol/src/: lib.rs
modules/a_rust/crates/gd_jmespath/: Cargo.toml
modules/a_rust/crates/gd_jmespath/src/: lib.rs
modules/a_rust/crates/gd_json_converter/: Cargo.toml
modules/a_rust/crates/gd_json_converter/src/: lib.rs
modules/a_rust/crates/rust_lib/: Cargo.toml
modules/a_rust/crates/rust_lib/src/: lib.rs
modules/a_rust/doc_classes/: Glicol.xml  JMESExpr.xml  JMESVariable.xml  JSONConverter.xml
modules/a_rust/editor/: resource_importer_json_converter.cpp  resource_importer_json_converter.h
modules/svg/: SCsub  (+5 more)
scene/: register_scene_types.cpp
(+129 files in other folders)
