[package]
name = "rust_lib"
version = "0.1.0"
authors = ["Luo Zhihao <luo_zhihao_jx@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
gd_glicol = { path = "../gd_glicol" }
gd_jmespath = { path = "../gd_jmespath" }
gd_json_converter = { path = "../gd_json_converter" }
